test/corpus/fail/issue-3057.mo
=========
issue-3057.mo
=========

module {
  public class Id<A>(x : A) {
    public func map<B>(f : A -> B) : Id<B> {
      Id(f(x));
    };
  };
};

---

(source_file
  (obj_dec
    (obj_sort)
    (obj_body
      (dec_field
        (vis)
        (class_dec
          (type_identifier)
          (typ_params
            (typ_bind
              (type_identifier)))
          (tup_pat
            (annot_pat
              (var_pat
                (identifier))
              (typ_annot
                (path_typ
                  (typ_path
                    (type_identifier))))))
          (class_body
            (obj_body
              (dec_field
                (vis)
                (func_dec
                  (identifier)
                  (typ_params
                    (typ_bind
                      (type_identifier)))
                  (tup_pat
                    (annot_pat
                      (var_pat
                        (identifier))
                      (typ_annot
                        (func_typ
                          (path_typ
                            (typ_path
                              (type_identifier)))
                          (path_typ
                            (typ_path
                              (type_identifier)))))))
                  (typ_annot
                    (path_typ
                      (typ_path
                        (type_identifier))
                      (path_typ
                        (typ_path
                          (type_identifier)))))
                  (func_body
                    (block_exp
                      (exp_dec
                        (call_exp_object
                          (var_exp
                            (identifier))
                          (par_exp
                            (call_exp_object
                              (var_exp
                                (identifier))
                              (par_exp
                                (var_exp
                                  (identifier))))))))))))))))))
